--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,23 @@
             <p class="text-gray-600 mt-2">TA → OT → MCS → 소개 퍼널 분석</p>
         </header>
 
+        <!-- 칸반보드 섹션 -->
+        <div class="mb-8">
+            <div class="flex justify-between items-center mb-4">
+                <h2 class="text-xl font-bold text-gray-800">공지사항 보드</h2>
+                <button onclick="openAddModal()" class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition flex items-center gap-2">
+                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"/>
+                    </svg>
+                    공지 추가
+                </button>
+            </div>
+
+            <div id="kanbanBoard" class="grid md:grid-cols-3 gap-4">
+                <!-- 칸반 컬럼들이 여기에 동적으로 생성됨 -->
+            </div>
+        </div>
+
         <!-- Filters -->
         <div class="bg-white rounded-xl shadow-lg p-6 mb-8">
             <div class="grid md:grid-cols-4 gap-4 items-end">
@@ -122,23 +139,6 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M9 17v-2m3 2v-4m3 4v-6m2 10H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/>
             </svg>
             <p class="mt-4 text-gray-600">조건에 맞는 데이터가 없습니다.</p>
-        </div>
-
-        <!-- 칸반보드 섹션 -->
-        <div class="mt-12">
-            <div class="flex justify-between items-center mb-6">
-                <h2 class="text-2xl font-bold text-gray-800">공지사항 보드</h2>
-                <button onclick="openAddModal()" class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition flex items-center gap-2">
-                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"/>
-                    </svg>
-                    공지 추가
-                </button>
-            </div>
-
-            <div id="kanbanBoard" class="grid md:grid-cols-3 gap-4">
-                <!-- 칸반 컬럼들이 여기에 동적으로 생성됨 -->
-            </div>
         </div>
     </div>
 
